# python-for-ai

./: api.py  class.py  pyproject.toml
Git/etc/: hosts
data/: mumbai_weather.csv
sales-analysis/output/: sales_data.xlsx
